feature aspirasi dan perbaikan dashboard

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "autoprefixer": "^10.4.22",
         "lodash": "^4.17.21",
         "postcss": "^8.5.6",
-        "vue": "^3.5.25"
+        "vue": "^3.5.25",
+        "ziggy-js": "^2.6.0"
     }
 }
