--- a/.env.example
+++ b/.env.example
@@ -39,8 +39,13 @@ QUEUE_CONNECTION=database
 
 CACHE_STORE=database
 # CACHE_PREFIX=
-
-MEMCACHED_HOST=127.0.0.1
+#
+# Super Admin Credentials (Change in .env for production)
+SUPERADMIN_EMAIL=superadmin@waspro.com
+SUPERADMIN_PASSWORD=password123
+SUPERADMIN_NAME="Super Admin"
+#
+ MEMCACHED_HOST=127.0.0.1
 
 REDIS_CLIENT=phpredis
 REDIS_HOST=127.0.0.1
