--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ Thumbs.db
 /development-notes
 /gemini-superpowers-antigravity-main
 /artifacts
+backup_before_fix_20260126_192607.sql
+backup_before_fix_manual_20260126_192939.sql
