feat: Enhance Pengurus role access and permissions across the application
- Updated AppLayout.vue to restrict access to admin features for Pengurus role.
- Modified Index.vue to prevent Pengurus from importing and creating members.
- Adjusted Dashboard.vue to show relevant statistics for Pengurus role.
- Updated web.php routes to include Pengurus in admin and member-related routes.
- Added tests for Pengurus role access to ensure proper permissions and functionality.

--- a/.gitignore
+++ b/.gitignore
@@ -25,5 +25,6 @@ Thumbs.db
 /development-notes
 /gemini-superpowers-antigravity-main
 /artifacts
+database.sqlite
 backup_before_fix_20260126_192607.sql
-backup_before_fix_manual_20260126_192939.sql
+backup_before_fix_manual_20260126_192939.sqldatabase
