feat: Add optimization and verification scripts for PHP-FPM and Nginx configurations

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ Thumbs.db
 database.sqlite
 backup_before_fix_20260126_192607.sql
 backup_before_fix_manual_20260126_192939.sqldatabase
+backup_before_fix_manual_20260126_192939.sql
