--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.7",
         "maatwebsite/excel": "^3.1",
+        "predis/predis": "^3.3",
         "simplesoftwareio/simple-qrcode": "^4.2"
     },
     "require-dev": {
