--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ database.sqlite
 backup_before_fix_20260126_192607.sql
 backup_before_fix_manual_20260126_192939.sqldatabase
 backup_before_fix_manual_20260126_192939.sql
+database.database.sqlite
