--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "box/spout": "^3.3",
         "dompdf/dompdf": "^3.1",
         "inertiajs/inertia-laravel": "^2.0",
+        "intervention/image-laravel": "^1.5",
         "laravel/framework": "^12.0",
         "laravel/socialite": "^5.23",
         "laravel/tinker": "^2.10.1",
