--- a/laravel-worker.conf
+++ b/laravel-worker.conf
@@ -1,38 +1,12 @@
-[Unit]
-Description=Queue Worker (Default)
-User=www-data
-Group=www-data
-Restart=always
-StartTimeoutSec=0
-StopTimeoutSec=1800
-ExecStart=/bin/sh -c "cd /var/www/html/anggota && php artisan queue:work --sleep=3 --tries=3 --timeout=300"
-ExecStop=/bin/sh -c "cd /var/www/html/anggota && php artisan queue:restart"
-StandardOutput=append
-StandardError=append
-SyslogIdentifier=laravel-worker-default
-
-[Unit]
-Description=Queue Worker (Exports)
-User=www-data
-Group=www-data
-Restart=always
-StartTimeoutSec=0
-StopTimeoutSec=1800
-ExecStart=/bin/sh -c "cd /var/www/html/anggota && php artisan queue:work --queue=exports --sleep=3 --tries=3 --timeout=600"
-ExecStop=/bin/sh -c "cd /var/www/html/anggota && php artisan queue:restart"
-StandardOutput=append
-StandardError=append
-SyslogIdentifier=laravel-worker-exports
-
-[Unit]
-Description=Queue Worker (Emails)
-User=www-data
-Group=www-data
-Restart=always
-StartTimeoutSec=0
-StopTimeoutSec=1800
-ExecStart=/bin/sh -c "cd /var/www/html/anggota && php artisan queue:work --queue=emails --sleep=3 --tries=3 --timeout=120"
-ExecStop=/bin/sh -c "cd /var/www/html/anggota && php artisan queue:restart"
-StandardOutput=append
-StandardError=append
-SyslogIdentifier=laravel-worker-emails
+[program:laravel-worker]
+process_name=%(program_name)s_%(process_num)02d
+command=php /var/www/anggota.plnipservices.or.id/artisan queue:work redis --sleep=3 --tries=3 --max-time=3600
+autostart=true
+autorestart=true
+stopasgroup=true
+killasgroup=true
+user=www-data
+numprocs=2
+redirect_stderr=true
+stdout_logfile=/var/www/anggota.plnipservices.or.id/storage/logs/worker.log
+stopwaitsecs=3600
